@@ -42,6 +42,7 @@ Stefan Priebe - Patches
 Carlos de Nova - i18n
 Stefan Hoesl - Testing
 Trond Hasle Amundsen - Template check_openmanage
+Silvan Hunkirchen - Bugreport
 
 ###########################################
 #           NPCD Thanks                   #
